--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
